--- a/style.css
+++ b/style.css
@@ -1,8 +1,20 @@
 body {
     display: flex;
+    flex-direction: column;
     width: 100%;
     height: 100svh;
     justify-content: center;
     align-items: center;
     margin: 0;
+}
+
+img {
+    position: absolute;
+    top: 12px;
+    right: 12px;
+    width: 32px;
+}
+#ar{
+    width: 100%;
+    height: 100%;
 }
